--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "node-appwrite": "^17.0.0",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
